syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/streamdal/libs/protos/build/go/protos/steps";
option ruby_package = "Streamdal::Protos";

enum HttpRequestMethod {
  HTTP_REQUEST_METHOD_UNSET = 0;
  HTTP_REQUEST_METHOD_GET = 1;
  HTTP_REQUEST_METHOD_POST = 2;
  HTTP_REQUEST_METHOD_PUT = 3;
  HTTP_REQUEST_METHOD_DELETE = 4;
  HTTP_REQUEST_METHOD_PATCH = 5;
  HTTP_REQUEST_METHOD_HEAD = 6;
  HTTP_REQUEST_METHOD_OPTIONS = 7;
}

enum HttpRequestBodyMode {
  HTTP_REQUEST_BODY_MODE_UNSET = 0;
  HTTP_REQUEST_BODY_MODE_STATIC = 1;
  HTTP_REQUEST_BODY_MODE_INTER_STEP_RESULT = 2;
}

message HttpRequest {
  HttpRequestMethod method = 1;
  string url = 2;
  bytes body = 3;
  map<string,string> headers = 4;
  HttpRequestBodyMode body_mode = 5;
}

message HttpResponse {
  int32 code = 1;
  bytes body = 2;
  map<string,string> headers = 3;
}

message HttpRequestStep {
  HttpRequest request = 1;
}
